# anvil-alloy-playground

./: .env.example  Cargo.toml  README.md
contracts/: Owner.sol
src/: lib.rs  main.rs
src/client/: anvil.rs  connect.rs  core.rs  mod.rs  token.rs
tests/: impersonate_test.rs  main_test.rs
