[package]
name = "anvil-alloy-playground"
version = "0.1.0"
edition = "2021"

[features]
anvil = ["alloy/node-bindings"]

[dependencies]
alloy = { version = "0.8.0", features = ["full"] }
alloy-chains = "0.1.48"
eyre = "0.6.12"
tokio = { version = "1.39.2", features = [
    "macros",
    "rt-multi-thread",
    "signal",
] }
